[gd_scene load_steps=5 format=3 uid="uid://caetmb0g3vc4x"]

[ext_resource type="Script" uid="uid://dowmo67p7ggy1" path="res://scenes/menus/mainMenu/menu.gd" id="1_klgdb"]
[ext_resource type="StyleBox" uid="uid://bl1cxbgmx01jl" path="res://assets/tiles/button inventory hover.tres" id="2_72jkf"]
[ext_resource type="StyleBox" uid="uid://dpyi3tekla651" path="res://assets/tiles/button inventory normal.tres" id="3_xi4hx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_680q2"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_klgdb")

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(320, 180)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.8, 0.6856, 0.592, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -23.0
offset_top = -33.0
offset_right = 23.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 38
text = "Bug attractor"

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../QuitButton")
focus_neighbor_bottom = NodePath("../OptionsButton")
theme_override_font_sizes/font_size = 19
theme_override_styles/focus = SubResource("StyleBoxEmpty_680q2")
theme_override_styles/hover = ExtResource("2_72jkf")
theme_override_styles/pressed = ExtResource("2_72jkf")
theme_override_styles/normal = ExtResource("3_xi4hx")
text = "Start"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../StartButton")
focus_neighbor_bottom = NodePath("../CreditsButton")
theme_override_font_sizes/font_size = 19
theme_override_styles/hover = ExtResource("2_72jkf")
theme_override_styles/pressed = ExtResource("2_72jkf")
theme_override_styles/normal = ExtResource("3_xi4hx")
text = "Options"

[node name="CreditsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../OptionsButton")
focus_neighbor_bottom = NodePath("../QuitButton")
theme_override_font_sizes/font_size = 19
theme_override_styles/hover = ExtResource("2_72jkf")
theme_override_styles/pressed = ExtResource("2_72jkf")
theme_override_styles/normal = ExtResource("3_xi4hx")
text = "Credits"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../CreditsButton")
focus_neighbor_bottom = NodePath("../StartButton")
theme_override_font_sizes/font_size = 19
theme_override_styles/hover = ExtResource("2_72jkf")
theme_override_styles/pressed = ExtResource("2_72jkf")
theme_override_styles/normal = ExtResource("3_xi4hx")
text = "Quit"

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="VBoxContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
